@@ -24,6 +24,9 @@ Release 2.1.1-beta - UNRELEASED
     MAPREDUCE-5251. Reducer should not implicate map attempt if it has
     insufficient space to fetch map output (Ashwin Shankar via jlowe)
 
+    MAPREDUCE-5317. Stale files left behind for failed jobs (Ravi Prakash via
+    jlowe)
+
 Release 2.1.0-beta - 2013-08-06
 
   INCOMPATIBLE CHANGES
